--- a/public/assets/admin/css/style.css
+++ b/public/assets/admin/css/style.css
@@ -20,12 +20,12 @@ body {
 }
 
 a {
-  color: #4154f1;
+  color: #CBBD9A;
   text-decoration: none;
 }
 
 a:hover {
-  color: #717ff5;
+  color: #CBBD9A;
   text-decoration: none;
 }
 
@@ -64,7 +64,7 @@ h6 {
   font-size: 24px;
   margin-bottom: 0;
   font-weight: 600;
-  color: #012970;
+  color: #6E6B66;
 }
 
 /*--------------------------------------------------------------
@@ -77,7 +77,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #5271FF;
+  background: #CBBD9A;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -91,7 +91,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #6776f4;
+  background: #CBBD9A;
   color: #fff;
 }
 
@@ -236,7 +236,7 @@ h6 {
   padding: 10px 0 5px 0;
   font-size: 18px;
   font-weight: 500;
-  color: #012970;
+  color: #6E6B66;
   font-family: "Poppins", sans-serif;
 }
 
@@ -282,7 +282,7 @@ h6 {
 }
 
 .accordion-button:not(.collapsed) {
-  color: #012970;
+  color: #6E6B66;
   background-color: #f6f9ff;
 }
 
@@ -294,7 +294,7 @@ h6 {
 
 .accordion-flush .accordion-button:not(.collapsed) {
   box-shadow: none;
-  color: #4154f1;
+  color: #CBBD9A;
 }
 
 .accordion-flush .accordion-body {
@@ -342,13 +342,13 @@ h6 {
 
 .nav-tabs-bordered .nav-link:hover,
 .nav-tabs-bordered .nav-link:focus {
-  color: #4154f1;
+  color: #CBBD9A;
 }
 
 .nav-tabs-bordered .nav-link.active {
   background-color: #fff;
-  color: #4154f1;
-  border-bottom: 2px solid #4154f1;
+  color: #CBBD9A;
+  border-bottom: 2px solid #CBBD9A;
 }
 
 /*--------------------------------------------------------------
@@ -393,7 +393,7 @@ h6 {
   font-size: 32px;
   padding-left: 10px;
   cursor: pointer;
-  color: #012970;
+  color: #6E6B66;
 }
 
 .header .search-bar {
@@ -430,7 +430,7 @@ h6 {
 .header .search-form input {
   border: 0;
   font-size: 14px;
-  color: #012970;
+  color: #6E6B66;
   border: 1px solid rgba(1, 41, 112, 0.2);
   padding: 7px 38px 7px 8px;
   border-radius: 3px;
@@ -453,7 +453,7 @@ h6 {
 }
 
 .header .search-form button i {
-  color: #012970;
+  color: #6E6B66;
 }
 
 /*--------------------------------------------------------------
@@ -470,13 +470,13 @@ h6 {
 
 .header-nav .nav-icon {
   font-size: 22px;
-  color: #012970;
+  color: #6E6B66;
   margin-right: 25px;
   position: relative;
 }
 
 .header-nav .nav-profile {
-  color: #012970;
+  color: #6E6B66;
 }
 
 .header-nav .nav-profile img {
@@ -686,7 +686,7 @@ h6 {
   align-items: center;
   font-size: 15px;
   font-weight: 600;
-  color: #4154f1;
+  color: #CBBD9A;
   transition: 0.3;
   background: #f6f9ff;
   padding: 10px 15px;
@@ -696,7 +696,7 @@ h6 {
 .sidebar-nav .nav-link i {
   font-size: 16px;
   margin-right: 10px;
-  color: #4154f1;
+  color: #CBBD9A;
 }
 
 .sidebar-nav .nav-link.collapsed {
@@ -709,12 +709,12 @@ h6 {
 }
 
 .sidebar-nav .nav-link:hover {
-  color: #4154f1;
+  color: #CBBD9A;
   background: #f6f9ff;
 }
 
 .sidebar-nav .nav-link:hover i {
-  color: #4154f1;
+  color: #CBBD9A;
 }
 
 .sidebar-nav .nav-link .bi-chevron-down {
@@ -737,7 +737,7 @@ h6 {
   align-items: center;
   font-size: 14px;
   font-weight: 600;
-  color: #012970;
+  color: #6E6B66;
   transition: 0.3;
   padding: 10px 0 10px 40px;
   transition: 0.3s;
@@ -752,11 +752,11 @@ h6 {
 
 .sidebar-nav .nav-content a:hover,
 .sidebar-nav .nav-content a.active {
-  color: #4154f1;
+  color: #CBBD9A;
 }
 
 .sidebar-nav .nav-content a.active i {
-  background-color: #4154f1;
+  background-color: #CBBD9A;
 }
 
 /*--------------------------------------------------------------
@@ -779,7 +779,7 @@ h6 {
 
 .dashboard .filter .icon:hover,
 .dashboard .filter .icon:focus {
-  color: #4154f1;
+  color: #CBBD9A;
 }
 
 .dashboard .filter .dropdown-header {
@@ -807,7 +807,7 @@ h6 {
 
 .dashboard .info-card h6 {
   font-size: 28px;
-  color: #012970;
+  color: #6E6B66;
   font-weight: 700;
   margin: 0;
   padding: 0;
@@ -823,7 +823,7 @@ h6 {
 }
 
 .dashboard .sales-card .card-icon {
-  color: #4154f1;
+  color: #CBBD9A;
   background: #f6f6fe;
 }
 
@@ -903,12 +903,12 @@ h6 {
 }
 
 .dashboard .news h4 a {
-  color: #012970;
+  color: #6E6B66;
   transition: 0.3s;
 }
 
 .dashboard .news h4 a:hover {
-  color: #4154f1;
+  color: #CBBD9A;
 }
 
 .dashboard .news p {
@@ -975,7 +975,7 @@ h6 {
   background-color: #fff;
   border-radius: 0.25rem;
   text-align: center;
-  color: #012970;
+  color: #6E6B66;
   padding: 15px 0;
 }
 
@@ -1024,7 +1024,7 @@ h6 {
 }
 
 .profile .profile-card .social-links a:hover {
-  color: #012970;
+  color: #6E6B66;
 }
 
 .profile .profile-overview .row {
@@ -1033,7 +1033,7 @@ h6 {
 }
 
 .profile .profile-overview .card-title {
-  color: #012970;
+  color: #6E6B66;
 }
 
 .profile .profile-overview .label {
@@ -1056,7 +1056,7 @@ h6 {
 .faq .basic h6 {
   font-size: 18px;
   font-weight: 600;
-  color: #4154f1;
+  color: #CBBD9A;
 }
 
 .faq .basic p {
@@ -1073,12 +1073,12 @@ h6 {
 .contact .info-box i {
   font-size: 38px;
   line-height: 0;
-  color: #4154f1;
+  color: #CBBD9A;
 }
 
 .contact .info-box h3 {
   font-size: 20px;
-  color: #012970;
+  color: #6E6B66;
   font-weight: 700;
   margin: 20px 0 10px 0;
 }
@@ -1140,7 +1140,7 @@ h6 {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #4154f1;
+  border-color: #CBBD9A;
 }
 
 .contact .php-email-form input {
@@ -1152,7 +1152,7 @@ h6 {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #4154f1;
+  background: #CBBD9A;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1184,7 +1184,7 @@ h6 {
 .error-404 h1 {
   font-size: 180px;
   font-weight: 700;
-  color: #4154f1;
+  color: #CBBD9A;
   margin-bottom: 0;
   line-height: 150px;
 }
@@ -1192,7 +1192,7 @@ h6 {
 .error-404 h2 {
   font-size: 24px;
   font-weight: 700;
-  color: #012970;
+  color: #6E6B66;
   margin-bottom: 30px;
 }
 
@@ -1224,14 +1224,14 @@ h6 {
 
 .footer .copyright {
   text-align: center;
-  color: #012970;
+  color: #6E6B66;
 }
 
 .footer .credits {
   padding-top: 5px;
   text-align: center;
   font-size: 13px;
-  color: #012970;
+  color: #6E6B66;
 }
 
 .show_entries label {
@@ -1252,7 +1252,7 @@ h6 {
 }
 
 .table_pasien a:hover {
-  color: #012970;
+  color: #6E6B66;
   font-weight: bold;
 }
 
@@ -1270,7 +1270,7 @@ h6 {
 }
 
 .btn_selesai:hover {
-  background: #012970;
+  background: #6E6B66;
 }
 
 
@@ -1296,5 +1296,5 @@ h6 {
 }
 
 .btn_profile:hover {
-  background: #012970;
+  background: #6E6B66;
 }
